--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "enzyme": "^2.8.0",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-scripts": "0.9.5",
     "redux-immutable-state-invariant": "^2.0.0"
   },
